cluster/app/opencti-rabbitmq/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: opencti-rabbitmq
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow
  namespace: opencti-rabbitmq
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          k8s-app: kube-dns
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-inter-node-traffic
  namespace: opencti-rabbitmq
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: rabbitmq
      app.kubernetes.io/name: rabbitmq
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app.kubernetes.io/component: rabbitmq
          app.kubernetes.io/name: rabbitmq
    ports:
    - port: 4369  # epmd
    - port: 25672 # clustering
    - port: 35672 # CLI tooling
      endPort: 35682
  - ports:
    - port: 443
      protocol: TCP
    to:
    - ipBlock:
        cidr: 10.0.0.1/32
  ingress:
  - from:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app.kubernetes.io/component: rabbitmq
          app.kubernetes.io/name: rabbitmq
    ports:
    - port: 4369  # epmd
    - port: 25672 # clustering
    - port: 35672 # CLI tooling
      endPort: 35682
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-operator-traffic
  namespace: opencti-rabbitmq
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: rabbitmq
      app.kubernetes.io/name: rabbitmq
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app.kubernetes.io/component: rabbitmq-operator
    ports:
    - port: 15672 # HTTP API
    - port: 15671 # HTTP API + TLS
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-rabbitmq-traffic
  namespace: opencti-rabbitmq
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: rabbitmq
      app.kubernetes.io/name: rabbitmq
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 5672  # AMQP
    - port: 5671  # AMQP + TLS
    - port: 5552  # Streams
    - port: 5551  # Streams + TLS
    - port: 15672 # HTTP API
    - port: 15671 # HTTP API + TLS
    - port: 61613 # STOMP
    - port: 61614 # STOMP + TLS
    - port: 1883  # MQTT
    - port: 8883  # MQTT + TLS
    - port: 15674 # STOMP-over-WebSockets
    - port: 15675 # MQTT-over-WebSockets
    - port: 15692 # Prometheus endpoint
    - port: 15691 # Prometheus endpoint + TLS
